# diagnostics-chatbot

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task-description.md  task-description.txt
.continue/rules/: python-code-standards.md
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
src/: main.py
src/schemas/: chat.py  document.py  files.py  query.py  upload.py
src/services/: agent.py  ingest.py  utils.py
